fix appearance on mobile

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -7,6 +7,12 @@ form {
     height: 300px;
 }
 
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 .container {
     width: 30em;
     margin: 0 auto;
